@@ -672,7 +672,10 @@ static struct {
 	{"Samsung:YH-820",			0x04e8, 0x502e, PTP_MTP},
 	{"Samsung:YH-925",			0x04e8, 0x502f, PTP_MTP},
 	/* Reported by cstrickler@gmail.com */
-	{"Samsung YP-U2J (YP-U2JXB/XAA)",	0x04e8, 0x5054, PTP_MTP},
+	{"Samsung:YP-U2J (YP-U2JXB/XAA)",	0x04e8, 0x5054, PTP_MTP},
+	/* Reported by Andrew Benson */
+	{"Samsung:YP-F2J",			0x04e8, 0x5057, PTP_MTP},
+
 	{"Samsung:YH-999 Portable Media Center",0x04e8, 0x5a0f, PTP_MTP},
 
 	/* Reported by Brian Robison */
